src/test/deca/context/invalid/homemade/select_protected_field.deca
// trying to select protected field

class A {
    protected int x=2;
}

{
    A a = new A();
    print(a.x);
}
